// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders per snapshot 1`] = `
<header
  className="headerBar"
>
  <WithStoreSubscriptionForHeaderIconComponent
    deps={
      Object {
        "textContent": Object {
          "applicationTitle": "THE_APPLICATION_TITLE",
        },
      }
    }
  />
  <span
    className="headerTitle"
  >
    THE_APPLICATION_TITLE
  </span>
  <div />
  <div
    className="spacer"
  />
  <div
    className="farItems"
  />
</header>
`;

exports[`Header renders without title 1`] = `
<header
  className="headerBar"
>
  <WithStoreSubscriptionForHeaderIconComponent
    deps={
      Object {
        "textContent": Object {
          "applicationTitle": "THE_APPLICATION_TITLE",
        },
      }
    }
  />
  <div />
  <div
    className="spacer"
  />
  <div
    className="farItems"
  />
</header>
`;
